# diamond_fluids

./: Fibrous_LA-ICP-MS_Map.py  Fluid_Comp_Analysis.py  Fluid_Comp_Analysis_Mine_Variant.py  Fluid_Comp_Analysis_location Variant.py  LAICPMS-Map_Object.py  README.md  Traceelement Ratio Classification Analyis HDF_inclusions Locality 1-15-25.xlsx  Traceelement Ratio Clustering Analyis HDF_inclusions 1-14-25.xlsx  Weiss_et_al-RiMG-Global_Diamond_HDF_compilation_Aug_2021.xlsx  hello.py  pyproject.toml  standard-macs-3 georem concentrations_internalstandard-Ba.xlsx  standard-macs-3 georem known concentrations_internalstandard-Ba.xlsx  standard: G_NIST612 concentrations.xlsx  standard: G_NIST612 known concentrations.xlsx  standard: macs-3 georem concentrations.xlsx  standard: macs-3 georem known concentrations.xlsx
Fibrous Diamond LA-ICP-MS/: fibrous_LA-ICP-MS_map_121224.xlsx
